<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".SignUp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <ImageView
                android:id="@+id/ivicon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_arrow"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/pageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textSize="17dp"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_text"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="23dp"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:layout_below="@+id/sign_up_text"
                android:id="@+id/sign_up_dialogue"
                android:layout_width="wrap_content"
                android:layout_marginLeft="23dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_dialogue"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/sign_up_dialogue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey" />

                <EditText
                    android:id="@+id/etMail"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="3dp"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_baseline_mail"
                    android:drawablePadding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/linear1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phonenumber_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone Number"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/darkGrey" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_hideNameCode="true"
                        app:ccp_textSize="16sp" />

                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:maxLength="10"
                        android:paddingLeft="3dp"
                        android:autoSizeMaxTextSize="10dp"
                        android:textSize="18sp"
                        android:inputType="number"
                        android:drawablePadding="10dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/linear2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="3dp"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_profile"
                    android:drawablePadding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/linear3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pass_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="16sp"
                    android:textColor="@color/darkGrey" />

                <EditText
                    android:id="@+id/etPass"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:textSize="18sp"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_lock" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/term_condition"
                android:layout_below="@id/linear4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="20dp"
                android:text="@string/term_condition"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <FrameLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:layout_below="@+id/term_condition"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="SIGN UP" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/ic_baseline_arrow_forward"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/register_text"
                android:layout_below="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"
                        android:textColor="@color/darkGrey"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Sign in"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/google_login_layout"
                android:layout_below="@+id/register_text"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/ic_base_line"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="40dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:id="@+id/google_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/google_login"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/google_login_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ic_base_line"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_login_layout">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/caller_icon" />

                <TextView
                    android:id="@+id/true_caller_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/true_caller_login"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>